--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
             "homepage": "http://ornicar.github.com"
         }
     ],
+    "source": {
+            "url": "https://github.com/insidenothing/php-github-api.git", //git url
+            "type": "git",
+            "reference": "master" //git branch-name
+        }
     "require": {
         "php": "^5.6 || ^7.0",
         "psr/http-message": "^1.0",
