--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "name": "insidenothing/php-github-api",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/insidenothing/php-github-api"
+        }
+    ],
     "type": "library",
     "description": "GitHub API v3 client",
     "homepage": "https://github.com/insidenothing/php-github-api",
@@ -16,20 +22,6 @@
             "homepage": "http://ornicar.github.com"
         }
     ],
-    "repositories":[
-        {
-            "type":"package",
-            "package":{
-                "name":"insidenothing/php-github-api",
-                "version":"master",
-                "source":{
-                    "url":"https://github.com/insidenothing/php-github-api.git",
-                    "type":"git",
-                    "reference":"master"
-                }
-            }
-        }
-        ]
     "require": {
         "php": "^5.6 || ^7.0",
         "psr/http-message": "^1.0",
